syntax = "proto3";

package taehoio.ddl.protobuf.v1;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/taehoio/protoc-gen-go-ddl/gen/go/taehoio/ddl/protobuf/v1;protobufv1";

enum DatastoreType {
  DATASTORE_TYPE_UNSPECIFIED = 0;
  DATASTORE_TYPE_SQLITE = 1;
  DATASTORE_TYPE_MYSQL = 2;
  DATASTORE_TYPE_POSTGRESQL = 3;
  DATASTORE_TYPE_MSSQL = 4;
  DATASTORE_TYPE_ORACLE = 5;
  DATASTORE_TYPE_BIGQUERY = 6;
  DATASTORE_TYPE_MONGODB = 7;
}

extend google.protobuf.MessageOptions {
  DatastoreType datastore_type = 60001;
}

extend google.protobuf.FieldOptions {
  bool key = 61001;
  repeated string index = 61002;
  repeated string unique = 61003;
  string type = 61004;
}
