syntax = "proto3";

package ddl.services.user.v1;

option go_package = "github.com/taehoio/ddl/gen/go/ddl/services/user/v1;userv1";

import "google/protobuf/timestamp.proto";
import "ddl/protobuf/v1/options.proto";

message User {
	option (ddl.protobuf.v1.datastore_type) = DATASTORE_TYPE_MYSQL;

	uint64 id = 1 [(ddl.protobuf.v1.key) = true];

	google.protobuf.Timestamp created_at = 2;
	google.protobuf.Timestamp updated_at = 3;
	google.protobuf.Timestamp deleted_at = 4;

	string password_hash = 5;
	string full_name = 6;
	string email = 7 [(ddl.protobuf.v1.index) = "name=idx_email"];
}
